options: add new url dialog + project selector etc., expand/collapse all, mark new and duplicates on import, ux fix/tune (jumping to places after actions) mark focused project remove foldable from projects & import sections - just leave it alone, always visible minor fixes, some for firefox compat options page favicon options css tune

--- a/EXT pub/options.css
+++ b/EXT pub/options.css
@@ -31,7 +31,7 @@ h4  {
 p   {
 	font-size: 1.1em;
 }
-a.external:before {
+a.external::before {
 	content: "\2197\0020";
 	white-space: nowrap;
 }
@@ -47,6 +47,7 @@ a.external:before {
 	padding-top: 10px;
     width: inherit;
 	background: #f9f9f9;
+	z-index: 10;
 }
 .heading header {
 	/*position: absolute;
@@ -248,6 +249,7 @@ button.fetch .icon  {   background-image: url(/Icons/Options/Refresh.svg);  }
 button.getAll .icon  {   background-image: url(/Icons/Options/GetWholePack.svg);  }
 button.compare .icon  { background-image: url(/Icons/Options/Compare.svg);  }
 button.replace .icon  { background-image: url(/Icons/Options/Replace.svg);  }
+button.clipboard .icon  { background-image: url(/Icons/Options/Clipboard.svg);  }
 
 button.env_contextAddDefaultSet {
 	display: none;
@@ -269,6 +271,9 @@ button.env_contextAddDefaultSet {
 	max-height: 250em;
 }
 
+.projects-container {
+	padding-right: 10px;    /* make some space for shadow drop on project hover */ 
+}
 .projects-container input[type="text"]    { /* possibly also all other text-like modern inputs */
 	background-color: transparent;
 	border-color: transparent;
@@ -297,7 +302,7 @@ button.env_contextAddDefaultSet {
 	border-radius: 3px;
 	padding: 10px;
 	margin-bottom: 10px;
-	transition: opacity 0.4s, box-shadow 0.3s, margin 0.3s;
+	transition: opacity 0.4s, box-shadow 0.3s, margin 0.3s, border 0.2s;
 }
 .projectItem.collapse    {
 	background: #eee;
@@ -310,6 +315,15 @@ button.env_contextAddDefaultSet {
 .projectItem:focus    {
 	border: 1px solid lightgray;
 }
+
+.projectItem.new    {
+	background: #d8f0f7;
+}
+.projectItem.uuid-collision    {
+	background: #edcece;
+	border: 1px solid #f7abab;
+}
+
 .projectItem input[name="project[name]"],
 .projectItem input[name="context[name]"]  {
 /*.projectItem input[name="link[name]"]  {*/
@@ -387,6 +401,16 @@ button.env_contextAddDefaultSet {
 .linkItem.hidden    {
 	opacity: .4;
 }
+.projectItem.hidden:hover,
+.projectItem.active-focus.hidden,
+.contextItem.hidden:hover,
+.linkItem.hidden:hover    {
+	opacity: .7;
+}
+
+.projectItem.active-focus   {
+	border: 1px solid #888;
+}
 
 .projectItem.filtered-out   {
 	display: none;
@@ -421,6 +445,39 @@ button.env_contextAddDefaultSet {
 }
 .projects-filter.active .input-reset    {
 	display: inline-block;
+}
+
+.projects-list-control  {
+	margin-left: 40px;
+}
+.projects-list-control a {
+	text-decoration: none;
+	color: #000;
+	margin: 0 4px;
+	padding: 6px 20px;
+	position: relative;
+}
+.projects-list-control a::after {
+	content: '';
+    position: absolute;
+	top: 4px;
+	left: 0; bottom: 0; right: -5px;
+	opacity: .2;
+	transition: opacity 0.2s;
+}
+#projects-expand-all::after  {
+	background: transparent url(Icons/Options/Expand.svg) no-repeat right 1px;
+	background-size: 20px;
+}
+#projects-collapse-all::after  {
+	background: transparent url(Icons/Options/Collapse.svg) no-repeat right 1px;
+	background-size: 20px;
+}
+.projects-list-control a:hover {
+	text-decoration: underline;
+}
+.projects-list-control a:hover::after {
+	opacity: .5;
 }
 
 label.primary   {
@@ -482,20 +539,25 @@ label.primary span  {
 	width: 100%;    height: 100%;
 	background: #fff;
 	opacity: 0.7;
+	z-index: 20;
 }
 .dialog {
 	position: fixed;
 	top: 0; left: 0;
 	width: 100%;    height: 100%;
 	text-align: center;
+	z-index: 30;
 }
 .dialog-inner {
 	position: relative;
-	margin: 8% auto;
+	margin: 20px auto;
+		margin-top: 5%;
 	background: #e7e7e7;
 	padding: 15px;
 	width: 50%;
 	box-shadow: 10px 10px 20px -3px #666;
+	max-height: 80vh;
+	overflow-y: auto;
 }
 .dialog-close  {
 	position: absolute;
@@ -556,13 +618,14 @@ label.primary span  {
 	width: 50%;
 }
 
-.flashContainer    {
-	animation: flash ease-in-out 0.5s 1;
+.blinkText    {
+	color: #e7e7e7;
+	animation: blink ease-in-out 0.35s 1;
 }
-@keyframes flash {
-	0% { background-color: #fff; }
-	30% { background-color: #f6ffe2; }
-	100% { background-color: #fff; }
+@keyframes blink {
+	0% { color: #e7e7e7; }
+	50% { color: #999; }
+	100% { color: #000 }
 }
 
 /* jump toolbar */
@@ -766,10 +829,10 @@ input#repo_key  {
 .project-item-preview.differs > h3    {
 	color: #ff8700;
 }
-.project-item-preview.differs > h3 .infoicon:before    {
+.project-item-preview.differs > h3 .infoicon::before    {
 	content: '\0021';
 }
-.project-item-preview.differs > h3 .infoicon:after    {
+.project-item-preview.differs > h3 .infoicon::after    {
 	content: 'Already exist, some differences detected';
 	font-size: 13px;
     margin-left: 10px;
@@ -779,10 +842,10 @@ input#repo_key  {
 .project-item-preview.identical > h3    {
 	color: #2ca545;
 }
-.project-item-preview.identical > h3 .infoicon:before   {
+.project-item-preview.identical > h3 .infoicon::before   {
 	content: '\2714';
 }
-.project-item-preview.identical > h3 .infoicon:after  {
+.project-item-preview.identical > h3 .infoicon::after  {
 	content: 'Already exist, looks the same';
 	font-size: 13px;
     margin-left: 10px;
@@ -836,4 +899,110 @@ input#repo_key  {
 .dialog.dialog-compare .compare-diff .deleted   {
 	color: #a52c2c;
 	background: #f8b8b8;
+}
+
+#url_selector   {
+	text-align: left;
+	margin-bottom: 30px;
+}
+#url_selector .url_option   {
+	margin: 7px;
+	padding: 8px 12px;
+	opacity: 0.5;
+	cursor: pointer;
+	background: transparent;
+	border: 1px solid #c9d4c4;
+	overflow-wrap: anywhere;
+	transition: background-color 100ms, opacity 200ms;
+}
+#url_selector .url_option.active,
+#url_selector .url_option:hover   {
+	opacity: 1;
+	background: #dde5da;
+	border: 1px solid #9d9b9b;
+}
+#url_selector .url_option:hover   {
+	background: #D9E3D2;
+}
+#url_selector .url_option.active    {
+	box-shadow: 4px 4px 15px -3px #999;
+}
+
+#url_selector .url_option > p   {
+	font-style: italic;
+	margin-top: 0;
+}
+
+h3.url_value    {
+	font-weight: bold;
+	/*cursor: grab;*/
+}
+h3.url_value:active {
+	/*cursor: grabbing;*/
+}
+
+.flashContainer    {
+	animation: flash ease-in-out 0.5s 1;
+}
+@keyframes flash {
+	0% { background-color: #fff; }
+	30% { background-color: #f6ffe2; }
+	100% { background-color: #fff; }
+}
+
+#projectSelector    {
+	text-align: left;
+	/*max-height: calc(100vh - 556px);*/
+	/*overflow-y: scroll;*/
+	margin-top: 20px;
+	padding: 0 10px;
+	position: relative;
+}
+.projectOptionItem  {
+	background: #f4f4f4;
+	border: 1px solid #f4f4f4;
+	padding: 5px 16px 10px;
+	margin: 12px 0;
+	opacity: 0.85;
+	cursor: pointer;
+	transition: opacity, background-color, border-color 0.25s;
+}
+.projectOptionItem:hover  {
+	opacity: 1;
+	background: #fff;
+	border-color: #444;
+}
+
+.projectOptionItem p    {
+	margin: 0;
+}
+.projectOptionItem .project-name    {
+	font-size: 1.3em;
+	font-weight: bold;
+}
+.projectOptionItem .contexts-list,
+.projectOptionItem .links-list    {
+	padding-left: 30px;
+}
+
+.projectOptionItem .contexts-list .name,
+.projectOptionItem .links-list .name    {
+	font-weight: 500;
+	display: inline-block;
+	min-width: 130px;
+}
+
+.projectOptionItem hr   {
+	border-top: 1px solid #c0c0c0;
+}
+
+#projectSelector .context-or-link   {
+	margin: 18px 0 5px;
+}
+
+.debug-mode-restricted  {
+	display: none;
+}
+.debug_mode .debug-mode-restricted  {
+	display: initial;
 }
